alignments fixed

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -26,6 +26,8 @@
     margin-left: 0.8;
 }
 
+
+
 /* navigation bar */
 .navbg{
     background-color: #fafbff;
@@ -65,34 +67,24 @@
     justify-content: center;
 }
 
+
+
 /* intro (name, designation, image, contacts) */
 #intro-section{
     padding-top: 5em;
 }
 
 .intro{
-    padding: 8em;
-    padding-left: 10em;
+    padding: 10em;
     padding-right: 0;
 }
 
-
 .image{
-    padding-left: 6em;
-}
-
-.fizzy{
-    width: 42em;
-    z-index: -1;
-    margin-left: -10em;
-    padding-left: 8em;
-    margin-top: -2em;
+margin-top: 5em;
 }
 
 .intro-img{
-    width: 24em;
-    margin-top: -35em;
-    padding-left: 4em;
+width: 28em;
 }
 
 .text-1{
@@ -144,13 +136,16 @@
     padding: 0.2em;
 }
 
+
+
+
 /* skills */
 .headings{
     width: 100%;
     font-style: italic;
     display:flex;
     justify-content: center;
-    margin-top: 3em;
+    margin-top: 4em;
     font-weight: bolder;
     margin-left: 0.7em;
 }
@@ -191,6 +186,9 @@
     justify-content: center;
     margin-top: 1.4em;
 }
+
+
+
 
 /* projects */
 
@@ -271,6 +269,9 @@
     height: 2em;
     font-size: small;
 }
+
+
+
 
 /* contact form */
 .contact-sec{
@@ -368,80 +369,16 @@
     font-weight: bolder;
 }
 
-        /* phone screen */
-        @media screen and (max-width: 1000px){
-        
-            .row{
-                margin-left: 0.8;
-            }
-            
-            /* navigation bar */
-            .navbg{
-                background-color: #fafbff;
-                width: 100vw;
-                height: 3.5em;
-            }
-            
-            .nav-item{
-                padding-left: 3em;
-            }
-            
-            .navtabs{
-                list-style-type: none;
-                width: 100vw;
-                margin-top: 1em;
-                display: flex;
-                justify-content: center;
-            }
-            
-            /* intro (name, designation, image, contacts) */
-
-            #intro-section{
-                padding-top: 4em;
-            }
-            
-            .intro{
-                padding: 4em;
-                padding-top: 10em;
-                padding-right: 0;
-            }
-            
-            
-            .image{
-                padding: 0;
-                
-            }
-            
-            .fizzy{
-                width: 38em;
-                z-index: -1;
-                margin-left: -10em;
-                padding-left: 8em;
-                margin-top: -1em;
-            }
-            .intro-img{
-                width: 22em;
-                margin-top: -30em;
-                padding-left: 4em;
-            }
-
-
+/* big screen */
+@media screen and (min-width: 1700px){
+    .image{
+        padding-left: 25em;
+        }
 }
 
-@media screen and (max-width: 760px){
-
-    #intro-section{
-        padding: 1em;
-    }
-
+/* phone screen */
+@media screen and (min-width: 1300px){
     .image{
-        padding-left: 6em;
-    }
-}
-
-@media screen and (max-width: 600px){
-
-    .image{
-        padding-left: 2.5em;
-    }
+        padding-left: 10em;
+        }
 }
